add link to template.

--- a/champion/templates/champion/reccent_update.html
+++ b/champion/templates/champion/reccent_update.html
@@ -11,11 +11,11 @@
 {% endblock %}
 
 {% block link %}
-{% url 'reccent_update' %}
+{% url 'champion' %}
 {% endblock %}
 
 {% block link_name %}
-Reccent Update Champion
+Champion Information Table
 {% endblock %}
 
 {% block content %}
