--- a/champion/templates/champion/base.html
+++ b/champion/templates/champion/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>op880623's blog</title>
+    <title>lol champion info site</title>
 <!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
     {% block add_css %}
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>{% block title %}{% endblock %}</h1>
+        <h1>{% block title %}{% endblock %}/<small><a href="{% block link %}{% endblock %}">{% block link_name %}{% endblock %}</a></small></h1>
+
     </div>
     {% block content %}
     {% endblock %}
