--- a/champion/static/champion/style.css
+++ b/champion/static/champion/style.css
@@ -15,7 +15,7 @@
 }
 
 div.table-container {
-  position: absolute;
+  position: relative;
   top: 120px;
   margin: 0 7.5%;
   padding: 0;
@@ -86,10 +86,6 @@ table.table_style > tbody > tr > td.name, table.table_style > tbody > tr > td.en
   min-width: 70px;
 }
 
-table.table_style > tbody > tr > td {
-  /*min-width: 45px*/
-}
-
 table.table_style > tbody > tr > td > span.true, table.table_style > tbody > tr > td > span.false {
   background-position: top left;
   background-repeat: no-repeat;
@@ -144,4 +140,33 @@ table.table_style + ul.pagination > li > a {
 table.table_style + ul.pagination > li.cardinality {
   float: right;
   color: #8d8d8d;
+}
+
+body {
+  margin: 0;
+}
+
+footer {
+  display: block;
+  position: relative;
+  margin-top: 150px;
+  bottom: 0;
+  left: 0;
+  background-color: #466995;
+  width: 100%;
+}
+
+footer > .container {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+  width: 1140px;
+  max-width: 100%;
+}
+
+footer > .container > p {
+  color: #FFF;
 }
