--- a/champion/templates/champion/base.html
+++ b/champion/templates/champion/base.html
@@ -1,25 +1,97 @@
+{% load static %}
 <!doctype html>
 <html>
+
 <head>
-    <title>lol champion info site</title>
-<!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
-    {% block add_css %}
-    {% endblock %}
+
+<title>lol champion info site</title>
+<link rel="stylesheet" href="{% static 'champion/style.css' %}" />
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
 </head>
+
 <body>
-    <div class="page-header">
-        <h1>{% block title %}{% endblock %}/<small><a href="{% block link %}{% endblock %}">{% block link_name %}{% endblock %}</a></small></h1>
+
+<div class="page-header">
+    <h1 id="title" class="header"><small><a href="" id="link"></a></small></h1>
+</div>
+
+<div class="table-container" ng-app="myApp" ng-controller="customersCtrl">
+    <table class="table_style">
+        <tr>
+            <th></th>
+            <th class="name" ng-click="order_by('name')">名字</th>
+            <th class="eng_name" ng-click="order_by('eng_name')">英文</th>
+            <th class="hp" ng-click="order_by('hp')">生命</th>
+            <th class="hpperlevel" ng-click="order_by('hpperlevel')">生命<br>成長</th>
+            <th class="hpmax" ng-click="order_by('hpmax')">最大<br>生命</th>
+            <th class="hpregen" ng-click="order_by('hpregen')">生命<br>回復</th>
+            <th class="hpregenperlevel" ng-click="order_by('hpregenperlevel')">生命<br>回復<br>成長</th>
+            <th class="hpregenmax" ng-click="order_by('hpregenmax')">最大<br>生命<br>回復</th>
+            <th class="mp" ng-click="order_by('mp')">魔力</th>
+            <th class="mpperlevel" ng-click="order_by('mpperlevel')">魔力<br>成長</th>
+            <th class="mpmax" ng-click="order_by('mpmax')">最大<br>魔力</th>
+            <th class="mpregen" ng-click="order_by('mpregen')">魔力<br>回復</th>
+            <th class="mpregenperlevel" ng-click="order_by('mpregenperlevel')">魔力<br>回復<br>成長</th>
+            <th class="mpregenmax" ng-click="order_by('mpregenmax')">最大<br>魔力<br>回復</th>
+            <th class="movespeed" ng-click="order_by('movespeed')">移動<br>速度</th>
+            <th class="attackdamage" ng-click="order_by('attackdamage')">物理<br>攻擊</th>
+            <th class="attackdamageperlevel" ng-click="order_by('attackdamageperlevel')">物理<br>攻擊<br>成長</th>
+            <th class="attackdamagemax" ng-click="order_by('attackdamagemax')">最大<br>物理<br>攻擊</th>
+            <th class="attackspeed" ng-click="order_by('attackspeed')">攻擊<br>速度</th>
+            <th class="attackspeedperlevel" ng-click="order_by('attackspeedperlevel')">攻擊<br>速度<br>成長</th>
+            <th class="attackrange" ng-click="order_by('attackrange')">攻擊<br>距離</th>
+            <th class="armor" ng-click="order_by('armor')">物理<br>防禦</th>
+            <th class="armorperlevel" ng-click="order_by('armorperlevel')">物理<br>防禦<br>成長</th>
+            <th class="armormax" ng-click="order_by('armormax')">最大<br>物理<br>防禦</th>
+            <th class="spellblock" ng-click="order_by('spellblock')">魔法<br>防禦</th>
+            <th class="spellblockperlevel" ng-click="order_by('spellblockperlevel')">魔法<br>防禦<br>成長</th>
+            <th class="spellblockmax" ng-click="order_by('spellblockmax')">最大<br>魔法<br>防禦</th>
+            <th class="update_date" ng-click="order_by('update_date')" ng-show="update_page">更新<br>日期</th>
+        </tr>
+        <tr ng-repeat="champion in champions | orderBy:order" ng-mouseover="set_selected($index)" ng-class="{selected:is_selected($index)}">
+            {% verbatim %}
+            <td>{{ $index + 1 }}</td>
+            <td class="name" ng-class="{ordered:is_ordered('name')}">{{ champion.name }}</td>
+            <td class="eng_name" ng-class="{ordered:is_ordered('eng_name')}">{{ champion.eng_name }}</td>
+            <td class="hp" ng-class="{ordered:is_ordered('hp')}">{{ champion.hp }}</td>
+            <td class="hpperlevel" ng-class="{ordered:is_ordered('hpperlevel')}">{{ champion.hpperlevel }}</td>
+            <td class="hpmax" ng-class="{ordered:is_ordered('hpmax')}">{{ champion.hpmax }}</td>
+            <td class="hpregen" ng-class="{ordered:is_ordered('hpregen')}">{{ champion.hpregen }}</td>
+            <td class="hpregenperlevel" ng-class="{ordered:is_ordered('hpregenperlevel')}">{{ champion.hpregenperlevel }}</td>
+            <td class="hpregenmax" ng-class="{ordered:is_ordered('hpregenmax')}">{{ champion.hpregenmax }}</td>
+            <td class="mp" ng-class="{ordered:is_ordered('mp')}">{{ champion.mp }}</td>
+            <td class="mpperlevel" ng-class="{ordered:is_ordered('mpperlevel')}">{{ champion.mpperlevel }}</td>
+            <td class="mpmax" ng-class="{ordered:is_ordered('mpmax')}">{{ champion.mpmax }}</td>
+            <td class="mpregen" ng-class="{ordered:is_ordered('mpregen')}">{{ champion.mpregen }}</td>
+            <td class="mpregenperlevel" ng-class="{ordered:is_ordered('mpregenperlevel')}">{{ champion.mpregenperlevel }}</td>
+            <td class="mpregenmax" ng-class="{ordered:is_ordered('mpregenmax')}">{{ champion.mpregenmax }}</td>
+            <td class="movespeed" ng-class="{ordered:is_ordered('movespeed')}">{{ champion.movespeed }}</td>
+            <td class="attackdamage" ng-class="{ordered:is_ordered('attackdamage')}">{{ champion.attackdamage }}</td>
+            <td class="attackdamageperlevel" ng-class="{ordered:is_ordered('attackdamageperlevel')}">{{ champion.attackdamageperlevel }}</td>
+            <td class="attackdamagemax" ng-class="{ordered:is_ordered('attackdamagemax')}">{{ champion.attackdamagemax }}</td>
+            <td class="attackspeed" ng-class="{ordered:is_ordered('attackspeed')}">{{ champion.attackspeed }}</td>
+            <td class="attackspeedperlevel" ng-class="{ordered:is_ordered('attackspeedperlevel')}">{{ champion.attackspeedperlevel }}</td>
+            <td class="attackrange" ng-class="{ordered:is_ordered('attackrange')}">{{ champion.attackrange }}</td>
+            <td class="armor" ng-class="{ordered:is_ordered('armor')}">{{ champion.armor }}</td>
+            <td class="armorperlevel" ng-class="{ordered:is_ordered('armorperlevel')}">{{ champion.armorperlevel }}</td>
+            <td class="armormax" ng-class="{ordered:is_ordered('armormax')}">{{ champion.armormax }}</td>
+            <td class="spellblock" ng-class="{ordered:is_ordered('spellblock')}">{{ champion.spellblock }}</td>
+            <td class="spellblockperlevel" ng-class="{ordered:is_ordered('spellblockperlevel')}">{{ champion.spellblockperlevel }}</td>
+            <td class="spellblockmax" ng-class="{ordered:is_ordered('spellblockmax')}">{{ champion.spellblockmax }}</td>
+            <td class="update_date" ng-class="{ordered:is_ordered('update_date')}" ng-show="update_page">{{ format_time(champion.update_date) }}</td>
+            {% endverbatim %}
+        </tr>
+    </table>
+</div>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <p>Copyright &copy; <a href="https://github.com/op880623/lol_champion_info_site">Hong Tai-Rong</a> 2017</p>
     </div>
+</footer>
 
-    {% block content %}
-    {% endblock %}
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>Copyright &copy; <a href="https://github.com/op880623/lol_champion_info_site">Hong Tai-Rong</a> 2017</p>
-        </div>
-    </footer>
+<script src="{% static 'champion/scipt.js' %}"></script>
 </body>
 </html>
