move static files' folder

--- a/champion/templates/champion/base.html
+++ b/champion/templates/champion/base.html
@@ -5,7 +5,7 @@
 <head>
 
 <title>lol champion info site</title>
-<link rel="stylesheet" href="{% static 'champion/style.css' %}" />
+<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
 </head>
@@ -137,6 +137,6 @@
     </div>
 </footer>
 
-<script src="{% static 'champion/scipt.js' %}"></script>
+<script src="{% static 'js/scipt.js' %}"></script>
 </body>
 </html>
